test/fixtures/diagnostics/type-checker/negative/non-exhaustive-type-level-union-match/input.tysh
namespace Samples.NonExhaustiveTypeLevelUnionMatch

type PrimitiveId = string | int

fun normalize(id: PrimitiveId): string =
  match id {
    text: string => text
  }
